--- a/account_financial_risk/views/res_partner_view.xml
+++ b/account_financial_risk/views/res_partner_view.xml
@@ -7,7 +7,7 @@
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form" />
         <field name="priority" eval="20" />
-        <field name="groups_id" eval="[(4, ref('account.group_account_manager'))]" />
+        <field name="groups_id" eval="[(4, ref('account_financial_risk.group_overpass_partner_risk_exception'))]" />
         <field name="arch" type="xml">
             <page name="sales_purchases" position="after">
                 <page
